force-app/main/default/objects/GiftCommitment/fields/Gift_Category__c.field-meta.xml
<CustomField>
    <fullName>Gift_Category__c</fullName>
    <label>Gift Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Stock</fullName>
            </value>
            <value>
                <fullName>IRA/QCD</fullName>
            </value>
            <value>
                <fullName>Bequest</fullName>
            </value>
            <value>
                <fullName>In-Kind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>