force-app/main/default/objects/GiftCommitment/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>Record ID from the legacy source system, retained for data migration and cross-referencing. Used as the External ID / upsert key when loading Gift Commitments.</description>
    <externalId>true</externalId>
    <inlineHelpText>Identifier for this record in the legacy system. Populated during data migration.</inlineHelpText>
    <label>Legacy ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>