force-app/main/default/objects/GiftCommitment/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity (DEPRECATED)</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Gift Commitments</relationshipLabel>
    <relationshipName>Gift_Commitments</relationshipName>
    <type>Lookup</type>
</CustomField>