force-app/main/default/objects/GiftCommitment/fields/Received_Gift_Transaction_Total__c.field-meta.xml
<CustomField>
    <fullName>Received_Gift_Transaction_Total__c</fullName>
    <description>Total received Gift Transaction amount for this Gift Commitment.</description>
    <inlineHelpText>Calculated by DLRS. Do not edit manually.</inlineHelpText>
    <label>Received Gift Transaction Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>