force-app/main/default/objects/GiftCommitment/fields/Write_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Date__c</fullName>
    <description>Date the Gift Commitment write-off was recorded.</description>
    <label>Write-off Date</label>
    <type>Date</type>
</CustomField>