force-app/main/default/objects/GiftCommitment/fields/Write_Off_Reason__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Reason__c</fullName>
    <description>Explanation for the Gift Commitment write-off.</description>
    <label>Write-off Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>