force-app/main/default/objects/GiftCommitment/fields/Write_Off_Status__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Status__c</fullName>
    <description>Records a full or partial grant write-off on this Gift Commitment so the original commitment is retained (GM-004).</description>
    <label>Write-Off Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Write-Off</fullName>
            </value>
            <value>
                <fullName>Partial Write-Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>